test/FAIL/disasmcmd/invalid_arguments/05_test_disasm.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid arguments"
#-------

disasm 0x1000:-0x1020
